k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pydjango-service
spec:
  type: ClusterIP
  selector:
    app: pydjango-label
  ports:
    - port: 80
      targetPort: 8000
